--- a/src/editor-search-bar.ui
+++ b/src/editor-search-bar.ui
@@ -13,6 +13,7 @@
             <property name="primary-icon-name">edit-find-symbolic</property>
             <property name="max-width-chars">20</property>
             <property name="hexpand">true</property>
+            <property name="placeholder-text" translatable="yes">Search</property>
             <signal name="activate" handler="editor_search_bar_search_activate_cb" swapped="true" object="EditorSearchBar"/>
           </object>
           <packing>
@@ -26,6 +27,7 @@
             <property name="max-width-chars">20</property>
             <property name="hexpand">true</property>
             <property name="visible">false</property>
+            <property name="placeholder-text" translatable="yes">Replace</property>
           </object>
           <packing>
             <property name="top-attach">1</property>
@@ -75,6 +77,7 @@
         <child>
           <object class="GtkToggleButton" id="replace_mode_button">
             <property name="visible">true</property>
+            <property name="tooltip-text" translatable="yes">Search &amp; Replace (Ctrl+h)</property>
             <child>
               <object class="GtkImage">
                 <property name="icon-name">edit-find-replace-symbolic</property>
@@ -90,6 +93,7 @@
         <child>
           <object class="GtkToggleButton" id="options_button">
             <property name="visible">true</property>
+            <property name="tooltip-text" translatable="yes">Toggle search options</property>
             <child>
               <object class="GtkImage">
                 <property name="icon-name">emblem-system-symbolic</property>
@@ -108,6 +112,7 @@
             <property name="halign">center</property>
             <property name="valign">center</property>
             <property name="visible">true</property>
+            <property name="tooltip-text" translatable="yes">Close search</property>
             <style>
               <class name="flat"/>
               <class name="small-button"/>
