--- a/src/editor-page.ui
+++ b/src/editor-page.ui
@@ -11,8 +11,10 @@
             <property name="message-type">warning</property>
             <property name="revealed">false</property>
             <property name="visible">true</property>
+            <property name="show-close-button">true</property>
             <child internal-child="content_area">
               <object class="GtkBox">
+                <property name="hexpand">true</property>
                 <child>
                   <object class="GtkBox">
                     <property name="orientation">vertical</property>
@@ -40,33 +42,23 @@
                 </child>
               </object>
             </child>
-            <child internal-child="content_area">
-              <object class="GtkBox">
+            <child internal-child="action_area">
+              <object class="GtkButtonBox">
+                <property name="hexpand">false</property>
+                <property name="halign">end</property>
                 <property name="valign">center</property>
-                <property name="vexpand">false</property>
                 <child>
-                  <object class="GtkButton">
+                  <object class="GtkButton" id="reload_button">
                     <property name="visible">true</property>
-                    <property name="label" translatable="yes">Discard Changes &amp; Reload</property>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkButton">
-                    <property name="visible">true</property>
-                    <property name="relief">none</property>
-                    <style>
-                      <class name="round"/>
-                    </style>
-                    <child>
-                      <object class="GtkImage">
-                        <property name="icon-name">window-close-symbolic</property>
-                        <property name="visible">true</property>
-                      </object>
-                    </child>
+                    <property name="use-underline">true</property>
+                    <property name="label" translatable="yes">Discard Changes &amp; _Reload</property>
                   </object>
                 </child>
               </object>
             </child>
+            <action-widgets>
+              <action-widget response="accept">reload_button</action-widget>
+            </action-widgets>
           </object>
         </child>
         <child>
