--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -257,6 +257,11 @@ Or, press Ctrl+W to close the window.</property>
                                 </child>
                               </object>
                             </child>
+                            <child>
+                              <object class="AdwPreferencesGroup" id="scheme_group">
+                                <property name="margin-top">12</property>
+                              </object>
+                            </child>
                           </object>
                         </child>
                       </object>
