--- a/src/help-overlay.ui
+++ b/src/help-overlay.ui
@@ -295,6 +295,12 @@
                 <property name="title" translatable="yes" context="shortcut window">Delete from cursor to paragraph end</property>
               </object>
             </child>
+            <child>
+              <object class="GtkShortcutsShortcut">
+                <property name="accelerator">&lt;ctrl&gt;d</property>
+                <property name="title" translatable="yes" context="shortcut window">Delete the current line</property>
+              </object>
+            </child>
           </object>
         </child>
       </object>
