--- a/src/editor-page.ui
+++ b/src/editor-page.ui
@@ -69,6 +69,63 @@
               </object>
             </child>
             <child type="overlay">
+              <object class="GtkRevealer" id="goto_line_revealer">
+                <property name="halign">end</property>
+                <property name="margin-end">6</property>
+                <property name="hexpand">false</property>
+                <property name="valign">start</property>
+                <property name="vexpand">false</property>
+                <property name="transition-duration">300</property>
+                <property name="transition-type">slide-down</property>
+                <property name="reveal-child">false</property>
+                <layout>
+                  <property name="measure">true</property>
+                </layout>
+                <child>
+                  <object class="GtkBox" id="goto_line_bar">
+                    <property name="orientation">vertical</property>
+                    <property name="spacing">6</property>
+                    <style>
+                      <class name="searchbar"/>
+                    </style>
+                    <child>
+                      <object class="GtkBox">
+                        <property name="spacing">6</property>
+                        <child>
+                          <object class="GtkLabel">
+                            <property name="label" translatable="yes">Go to Line</property>
+                            <property name="margin-start">3</property>
+                            <property name="margin-end">3</property>
+                            <property name="halign">start</property>
+                            <attributes>
+                              <attribute name="weight" value="bold"/>
+                            </attributes>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkEntry" id="goto_line_entry">
+                            <property name="width-chars">3</property>
+                            <property name="max-width-chars">7</property>
+                            <signal name="activate" handler="goto_line_entry_activate_cb" swapped="true"/>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkButton" id="goto_line_button">
+                            <property name="label" translatable="yes">Go</property>
+                            <property name="width-request">50</property>
+                            <property name="action-name">page.goto-line</property>
+                            <style>
+                              <class name="suggested-action"/>
+                            </style>
+                          </object>
+                        </child>
+                      </object>
+                    </child>
+                  </object>
+                </child>
+              </object>
+            </child>
+            <child type="overlay">
               <object class="GtkProgressBar" id="progress_bar">
                 <style>
                   <class name="osd"/>
