--- a/src/help-overlay.ui
+++ b/src/help-overlay.ui
@@ -266,6 +266,12 @@
                 <property name="title" translatable="yes" context="shortcut window">Move current or selected lines down</property>
               </object>
             </child>
+            <child>
+              <object class="GtkShortcutsShortcut">
+                <property name="accelerator">&lt;ctrl&gt;i</property>
+                <property name="title" translatable="yes" context="shortcut window">Go to line</property>
+              </object>
+            </child>
           </object>
         </child>
         <child>
