--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -121,6 +121,7 @@
         </child>
         <child>
           <object class="AdwFlap" id="flap">
+            <property name="flap-position">end</property>
             <property name="transition-type">over</property>
             <property name="reveal-flap">false</property>
             <child type="separator">
