--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -215,6 +215,18 @@ Or, press Ctrl+W to close the window.</property>
                     </child>
                     <child>
                       <object class="AdwPreferencesGroup">
+                        <property name="title" translatable="yes">Behavior</property>
+                        <property name="margin-top">24</property>
+                        <child>
+                          <object class="EditorPreferencesSwitch" id="session">
+                            <property name="title" translatable="yes">Restore Session</property>
+                            <property name="schema-key">restore-session</property>
+                          </object>
+                        </child>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="AdwPreferencesGroup">
                         <property name="title" translatable="yes">Font</property>
                         <property name="margin-top">12</property>
                         <child>
